Ruth-branch first update with master branch

--- a/pages/trans-prof.html
+++ b/pages/trans-prof.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="nav-logo">
-                <img src="../images/Netflix_Logo_PMS.png" alt="">
+                <img src="../public/images/Netflix_Logo_PMS.png" alt="">
             </div>
             <ul>
                 <li><a href="./logout.html">Sign Out</a></li>
@@ -29,7 +29,7 @@
             <h3>Start your profile transfer</h3>
             <div class="profile-picture">
                 <div class="pic">
-                    <img src="../images/AAAABSXQoki5NPH49PnbxeGimvlQtPDmYO7N3e7yd0zhLNA5ByAKNkd_hCSzOmTgsDjYs2qOCWbwhgHfiY4_Caxfhg6fEVazSlQ.png" alt="">
+                    <img src="../public/images/AAAABSXQoki5NPH49PnbxeGimvlQtPDmYO7N3e7yd0zhLNA5ByAKNkd_hCSzOmTgsDjYs2qOCWbwhgHfiY4_Caxfhg6fEVazSlQ.png" alt="">
                 </div>
                 <p>Ruddy</p>
             </div>
@@ -40,15 +40,15 @@
             <div class="transfers">
                 <div class="txt-display">
                     <div class="txt">
-                        <img src="../images/image1.svg" alt="">
+                        <img src="../public/images/image1.svg" alt="">
                         <p>Transfer recommendations, viewing history, My List, saved games, settings and more</p>
                     </div>
                     <div class="txt">
-                        <img src="../images/image2.svg" alt="">
+                        <img src="../public/images/image1.svg" alt="">
                         <p>Own your account, or join an existing account, and keep everything you love about this profile</p>
                     </div>
                     <div class="txt">
-                        <img src="../images/image3.svg" alt="">
+                        <img src="../public/images/image3.svg" alt="">
                     <p>We’ll leave a backup copy of this profile on the original account</p>
                     </div>
                     <h4>*Saved games will not be included in the backup copy.</h4>
