--- a/pages/add-prof.html
+++ b/pages/add-prof.html
@@ -11,35 +11,37 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         </head>
 <body>
-    <div class="profile-creation">
-        <h2>Create a New Profile</h2>
-        <div class="profile-picture-selector">
-          <label for="profile-pic">Profile Picture:</label>
-          <input type="file" id="profile-pic">
+    <!-- Add a profile for another person watching Netflix -->
+     <div class="profile-crea">
+      <div class="profile-creation">
+        <div class="nav">
+          <i class="fa-solid fa-x"></i>
         </div>
-        <div class="profile-name">
-          <label for="profile-name">Profile Name:</label>
-          <input type="text" id="profile-name" placeholder="Enter profile name">
-        </div>
-        <div class="icon-selection">
-          <label>Select an Icon:</label>
-          <div class="icon-grid">
-            <img src="default-icon1.jpg" alt="Icon 1">
-            <img src="default-icon2.jpg" alt="Icon 2">
-            <!-- More icons -->
+        <div class="prof-content">
+          <h2>Add a Profile</h2>
+          <p>Add a profile for another person watching Netflix.</p>
+          <div class="account-input">
+            <img src="https://occ-0-5541-1167.1.nflxso.net/dnm/api/v6/vN7bi_My87NPKvsBoib006Llxzg/AAAABfjwXqIYd3kCEU6KWsiHSHvkft8VhZg0yyD50a_pHXku4dz9VgxWwfA2ontwogStpj1NE9NJMt7sCpSKFEY2zmgqqQfcw1FMWwB9.png?r=229" width="5%" height="5%">
+            <input type="name" id="profile-name" placeholder="Name">
+          </div>        
+          <div class="kid-profile">
+            <div class="btn">
+              <h4>Kids profile</h4>
+              <div class="ic">
+                <i class="fa-solid fa-minus"></i>
+                <i class="fa-sharp fa-solid fa-check"></i>
+              </div>
+          </div>
+              <p>only see kids-friendly TV shows and movies</p>
+            </div>
+          <div class="actions">
+            <button type="submit">Save</button>
+            <button type="button" class="bt">Cancel</button>
           </div>
         </div>
-        <div class="settings">
-          <input type="checkbox" id="kids-profile"> Make this a kids' profile
-        </div>
-        <div class="actions">
-          <button type="submit">Save</button>
-          <button type="button" onclick="window.location.href='profile-settings.html'">Cancel</button>
-        </div>
-      </div>      
-    </body>
-    </html>
-    
+          
+        </div>     
+     </div>  
     <script src="../script/add-prof.js"></script>
 </body>
 </html>
