to gather second page

--- a/pages/log.html
+++ b/pages/log.html
@@ -29,7 +29,8 @@
         <span class="title"><h3>Sign In</h3></span>
         <input type="email" id="e-mail" placeholder="Email Address"/>
         <input type="password" id="pswd" placeholder="Password"/>
-        <button type="button" class="sgn-btn" id="log-sn">Sign In</button>
+        <div id="error-message" style="color: red;"></div> <!-- Error message display -->
+        <button type="submit" class="sgn-btn" id="log-sn">Sign In</button>
         <div class="parter"><p>OR</p></div>
         <button type="button" class="uscde" id="us-sd">Use a Sign-in code</button>
         <div class="parted"><a href="#">Forgot Password?</a></div>
