--- a/pages/add-prof.html
+++ b/pages/add-prof.html
@@ -15,7 +15,7 @@
      <div class="profile-crea">
       <div class="profile-creation">
         <div class="nav">
-          <i class="fa-solid fa-x"></i>
+          <i class="fa-solid fa-x"><a href="manage-prof.html"></a></i>
         </div>
         <div class="prof-content">
           <h2>Add a Profile</h2>
@@ -29,14 +29,14 @@
               <h4>Kids profile</h4>
               <div class="ic">
                 <i class="fa-solid fa-minus"></i>
-                <i class="fa-sharp fa-solid fa-check"></i>
+                <i class="fa-sharp fa-solid fa-check" ></i>
               </div>
           </div>
               <p>only see kids-friendly TV shows and movies</p>
             </div>
           <div class="actions">
-            <button type="submit">Save</button>
-            <button type="button" class="bt">Cancel</button>
+            <button type="submit"  class="bt1"><a href="./edit-done.html">Save</a></button>
+            <button type="button" class="bt"><a href="./edit-done.html">Cancel</a></button>
           </div>
         </div>
         </div>     
