--- a/pages/trans-prof.html
+++ b/pages/trans-prof.html
@@ -17,14 +17,11 @@
                 <img src="../public/images/Netflix_Logo_PMS.png" alt="">
             </div>
             <ul>
-
-                <li><a href="./logout.html">Sign Out</a></li>
-
+                <li><a href="../src/index.html">Sign Out</a></li>
             </ul>
         </nav>
     </header>
     <!-- end of nav -->
-
     <!-- Start your profile transfer -->
     <div class="trans-con">
         <div class="start-prof">
@@ -59,9 +56,6 @@
             </ul>
         </div>
     </div>
-
-
-
 <div class="footer-container">
     <footer>
         <div class="quest">
@@ -89,7 +83,6 @@
         </div>
     </footer>
 </div>
-
 <!-- end of footer -->
     <script src="../script/trans-prof.js"></script>
 </body>
