checking kemmy's updates

--- a/src/tv.html
+++ b/src/tv.html
@@ -17,7 +17,7 @@
       <div class="nav-left">
         <div>
           <img src="../public/IMAGES/asset 63.png"/> 
-        </div>
+        <!-- </div> -->
 
         <div class="nav-text">
         <h2>TV Shows</h2>
