--- a/src/home.html
+++ b/src/home.html
@@ -19,6 +19,7 @@
             </div>
             <ul>
               <li><a href="./home.html">Home </a></li>
+              <li><a href="./home.html" class="per">Tv Shows</a></li>
             </ul>
             <div class="profile">
                 <div class="icon">
@@ -27,7 +28,7 @@
                       <i class="fa-solid fa-bell"></i>
                     <div class="bell-pics">
                       <div class="bp">
-                          <img src="../images/AAAABVPS-quqUJBimMMlsqOqyLW_rG6X3Ffs2KfTpa4kdWXSXESH-j9qo8v70SaF2igUkOCaZcKP-XDIvZCI0D7bUA55oDUazJSR6bfr0QRobNqiMmqVCveAbcBqKpIsHdJHbNGNn6r6cJXQzj4.jpg" alt="">
+                          <img src="../public/images/AAAABVPS-quqUJBimMMlsqOqyLW_rG6X3Ffs2KfTpa4kdWXSXESH-j9qo8v70SaF2igUkOCaZcKP-XDIvZCI0D7bUA55oDUazJSR6bfr0QRobNqiMmqVCveAbcBqKpIsHdJHbNGNn6r6cJXQzj4.jpg" alt="">
                           <div class="bell-one">
                           <h4>Now available</h4>
                         <h4>Season 3</h4>
@@ -35,7 +36,7 @@
                         </div>
                       </div>
                       <div class="bp">
-                        <img src="../images/AAAABVPS-quqUJBimMMlsqOqyLW_rG6X3Ffs2KfTpa4kdWXSXESH-j9qo8v70SaF2igUkOCaZcKP-XDIvZCI0D7bUA55oDUazJSR6bfr0QRobNqiMmqVCveAbcBqKpIsHdJHbNGNn6r6cJXQzj4.jpg" alt="">
+                        <img src="../public/images/AAAABVPS-quqUJBimMMlsqOqyLW_rG6X3Ffs2KfTpa4kdWXSXESH-j9qo8v70SaF2igUkOCaZcKP-XDIvZCI0D7bUA55oDUazJSR6bfr0QRobNqiMmqVCveAbcBqKpIsHdJHbNGNn6r6cJXQzj4.jpg" alt="">
                         <div class="bell-one">
                         <h4>Now available</h4>
                       <h4>Season 3</h4>
@@ -43,7 +44,7 @@
                       </div>
                     </div>
                     <div class="bp">
-                      <img src="../images/AAAABVPS-quqUJBimMMlsqOqyLW_rG6X3Ffs2KfTpa4kdWXSXESH-j9qo8v70SaF2igUkOCaZcKP-XDIvZCI0D7bUA55oDUazJSR6bfr0QRobNqiMmqVCveAbcBqKpIsHdJHbNGNn6r6cJXQzj4.jpg" alt="">
+                      <img src="../public/images/AAAABVPS-quqUJBimMMlsqOqyLW_rG6X3Ffs2KfTpa4kdWXSXESH-j9qo8v70SaF2igUkOCaZcKP-XDIvZCI0D7bUA55oDUazJSR6bfr0QRobNqiMmqVCveAbcBqKpIsHdJHbNGNn6r6cJXQzj4.jpg" alt="">
                       <div class="bell-one">
                       <h4>Now available</h4>
                     <h4>Season 3</h4>
@@ -51,7 +52,7 @@
                     </div>
                   </div>
                   <div class="bp">
-                    <img src="../images/AAAABVPS-quqUJBimMMlsqOqyLW_rG6X3Ffs2KfTpa4kdWXSXESH-j9qo8v70SaF2igUkOCaZcKP-XDIvZCI0D7bUA55oDUazJSR6bfr0QRobNqiMmqVCveAbcBqKpIsHdJHbNGNn6r6cJXQzj4.jpg" alt="">
+                    <img src="../public/images/AAAABVPS-quqUJBimMMlsqOqyLW_rG6X3Ffs2KfTpa4kdWXSXESH-j9qo8v70SaF2igUkOCaZcKP-XDIvZCI0D7bUA55oDUazJSR6bfr0QRobNqiMmqVCveAbcBqKpIsHdJHbNGNn6r6cJXQzj4.jpg" alt="">
                     <div class="bell-one">
                     <h4>Now available</h4>
                   <h4>Season 3</h4>
