checking kemmy's updates

--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,10 @@
               membership</b
             >
           </p>
-          <form class="inp-class" id="innput">
+          <div class="inp-class">
             <input type="text" placeholder="Email address" id="email" />
-            <button type="submit" class="strt" id="start">Get Started ></button>
-          </form>
-          <div class="err" id="error-msg" style="color: red"></div>
+            <button type="button" class="strt" id="start">Get Started ></button>
+          </div>
         </div>
       </div>
     </header>
@@ -465,11 +464,10 @@
       <p class="ttxt">
         Ready to watch? Enter your email to create or restart your membership.
       </p>
-      <form class="inp-class" id="input-class">
-        <input type="text" placeholder="Email address" id="em-il" />
-        <button type="submit" class="strt" id="start">Get Started ></button>
-      </form>
-      <div class="err" id="erro-msg" style="color: red"></div>
+      <div class="inp-class">
+        <input type="text" placeholder="Email address" id="email" />
+        <button type="button" class="strt" id="start">Get Started ></button>
+      </div>
     </section>
 
     <footer class="page-footer">
