--- a/pages/trans-prof.html
+++ b/pages/trans-prof.html
@@ -17,7 +17,7 @@
                 <img src="../public/images/Netflix_Logo_PMS.png" alt="">
             </div>
             <ul>
-                <li><a href="../src/index.html">Sign Out</a></li>
+                <li><a href="/src/index.html">Sign Out</a></li>
             </ul>
         </nav>
     </header>
