made some adjustments in Kemmy's work so that mine can work & added Tv shows page

--- a/Netflix-clone/src/home.html
+++ b/Netflix-clone/src/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Netflix Nigeria-home</title>
     <script src="https://kit.fontawesome.com/8752be39ad.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
             </div>
             <ul>
               <li><a href="./home.html">Home </a></li>
-              <li><a href="./home.html" class="per">Tv Shows</a></li>
+              <li><a href="../src/tv.html" class="per">Tv Shows</a></li>
             </ul>
             <div class="profile">
                 <div class="icon">
@@ -97,7 +97,7 @@
                         <a href="">Help center</a>
                     </div>
                       <hr>
-                    <a href="" class="button">Sign out of Netflix</a>
+                    <a href="../src/index.html" class="button">Sign out of Netflix</a>
                   </div>
                   </div>
                   <div class="arr-drop">
@@ -131,7 +131,7 @@
                       <i class="fa-regular fa-circle-question"></i>
                         <a href="" class="">Help center</a>
                     </div>
-                      <a href="" class="button">Sign out of Netflix</a>
+                      <a href="../src/index.html" class="button">Sign out of Netflix</a>
                   </div>
                   </div>
                 </div>
@@ -143,7 +143,7 @@
       <!-- page one -->
         <div class="page-one">
           <div class="bg-video">
-            <video src="" id="myVideo"></video>
+            <video src="/Netflix-clone/public/videos/I'm Not Him (2021) (NetNaija.com).mp4" id="myVideo"></video>
           </div>
           <div class="txt">
             <div class="txt-c">
