--- a/Netflix-clone/pages/jobs.html
+++ b/Netflix-clone/pages/jobs.html
@@ -9,7 +9,7 @@
 <body>
     <header id="navv">
         <div>
-            <video src="./IMAGES/2759484-uhd_3840_2160_30fps.mp4"  controls loop width="1160" style="margin-top: -25px; position: absolute; height: 400px; filter: brightness(0.9);"></video>
+            <video src="./images/2759484-uhd_3840_2160_30fps.mp4"  controls loop width="1160" style="margin-top: -25px; position: absolute; height: 400px; filter: brightness(0.9);"></video>
             <div class="head-div">
                 <h2>A great workplace combines exceptional colleagues and hard problems.</h2>
                 <input type="text" placeholder="Search Jobs by Keyword">
@@ -17,7 +17,7 @@
         </div>
         <div class="navbar">
         <div class="IMG">
-            <img src="../public/IMAGES/asset 63.png" alt="">
+            <img src="../public/images/asset 63.png" alt="">
         </div>
         <nav>
             <h2>JOBS</h2>
