--- a/Netflix-clone/src/tv.html
+++ b/Netflix-clone/src/tv.html
@@ -16,7 +16,7 @@
     <nav class="navv">
       <div class="nav-left">
         <div>
-          <img src="../public/IMAGES/asset 63.png"/> 
+          <img src="../public/images/asset 63.png"/> 
         </div>
 
         <div class="nav-text">
@@ -117,7 +117,7 @@
  <video src="" controls loop width="1150"></video>
 </div>
  <div class="imgg">
-  <img src="../public/IMAGES/asset 2.webp">
+  <img src="../public/images/asset 2.webp">
  </div>
  <div class="line-text">
 
@@ -171,16 +171,16 @@
 <div class="slider">
   <h2>My List</h2>
   <div class="slider-container">
-      <div class="slide"><img src="../public/IMAGES/asset 12.webp" alt="Show 1"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 16.webp" alt="Show 2"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 13.webp" alt="Show 3"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 14.jpeg" alt="Show 4"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 17.jpeg" alt="Show 5"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 14.jpeg" alt="Show 4"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 17.jpeg" alt="Show 5"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 12.webp" alt="Show 1"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 16.webp" alt="Show 2"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 13.webp" alt="Show 3"></div>
+      <div class="slide"><img src="../public/images/asset 12.webp" alt="Show 1"></div>
+      <div class="slide"><img src="../public/images/asset 16.webp" alt="Show 2"></div>
+      <div class="slide"><img src="../public/images/asset 13.webp" alt="Show 3"></div>
+      <div class="slide"><img src="../public/images/asset 14.jpeg" alt="Show 4"></div>
+      <div class="slide"><img src="../public/images/asset 17.jpeg" alt="Show 5"></div>
+      <div class="slide"><img src="../public/images/asset 14.jpeg" alt="Show 4"></div>
+      <div class="slide"><img src="../public/images/asset 17.jpeg" alt="Show 5"></div>
+      <div class="slide"><img src="../public/images/asset 12.webp" alt="Show 1"></div>
+      <div class="slide"><img src="../public/images/asset 16.webp" alt="Show 2"></div>
+      <div class="slide"><img src="../public/images/asset 13.webp" alt="Show 3"></div>
   </div>
   <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
   <button class="next" onclick="moveSlide(1)">&#10095;</button>
@@ -189,16 +189,16 @@
 <div class="slider">
   <h2>Drama Movies</h2>
   <div class="slider-contain">
-      <div class="slide"><img src="../public/IMAGES/asset 18.jpeg" alt="Show 6"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 19.jpeg" alt="Show 7"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 20.jpeg" alt="Show 8"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 23.jpeg" alt="Show 9"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 24.jpeg" alt="Show 10"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 23.jpeg" alt="Show 9"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 24.jpeg" alt="Show 10"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 26.webp" alt="Show 10"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 25.webp" alt="Show 10"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 22.jpeg" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 18.jpeg" alt="Show 6"></div>
+      <div class="slide"><img src="../public/images/asset 19.jpeg" alt="Show 7"></div>
+      <div class="slide"><img src="../public/images/asset 20.jpeg" alt="Show 8"></div>
+      <div class="slide"><img src="../public/images/asset 23.jpeg" alt="Show 9"></div>
+      <div class="slide"><img src="../public/images/asset 24.jpeg" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 23.jpeg" alt="Show 9"></div>
+      <div class="slide"><img src="../public/images/asset 24.jpeg" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 26.webp" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 25.webp" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 22.jpeg" alt="Show 10"></div>
   </div>
   <button class="prev" onclick="moveSlides(-1)">&#10094;</button>
   <button class="next" onclick="moveSlides(1)">&#10095;</button>
@@ -207,16 +207,16 @@
 <div class="slider">
   <h2>New On Netflix</h2>
   <div class="slider-containing">
-      <div class="slide"><img src="../public/IMAGES/asset 12.webp" alt="Show 1"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 16.webp" alt="Show 2"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 13.webp" alt="Show 3"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 14.jpeg" alt="Show 4"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 17.jpeg" alt="Show 5"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 13.webp" alt="Show 3"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 14.jpeg" alt="Show 4"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 17.jpeg" alt="Show 5"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 25.webp" alt="Show 10"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 22.jpeg" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 12.webp" alt="Show 1"></div>
+      <div class="slide"><img src="../public/images/asset 16.webp" alt="Show 2"></div>
+      <div class="slide"><img src="../public/images/asset 13.webp" alt="Show 3"></div>
+      <div class="slide"><img src="../public/images/asset 14.jpeg" alt="Show 4"></div>
+      <div class="slide"><img src="../public/images/asset 17.jpeg" alt="Show 5"></div>
+      <div class="slide"><img src="../public/images/asset 13.webp" alt="Show 3"></div>
+      <div class="slide"><img src="../public/images/asset 14.jpeg" alt="Show 4"></div>
+      <div class="slide"><img src="../public/images/asset 17.jpeg" alt="Show 5"></div>
+      <div class="slide"><img src="../public/images/asset 25.webp" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 22.jpeg" alt="Show 10"></div>
   </div>
   <button class="prev" onclick="moveSlidex(-1)">&#10094;</button>
   <button class="next" onclick="moveSlidex(1)">&#10095;</button>
@@ -225,16 +225,16 @@
 <div class="slider">
   <h2>Because you watched witch dragon</h2>
   <div class="slider-conting">
-      <div class="slide"><img src="../public/IMAGES/asset 18.jpeg" alt="Show 6"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 19.jpeg" alt="Show 7"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 20.jpeg" alt="Show 8"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 23.jpeg" alt="Show 9"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 24.jpeg" alt="Show 10"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 23.jpeg" alt="Show 9"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 24.jpeg" alt="Show 10"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 12.webp" alt="Show 1"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 16.webp" alt="Show 2"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 13.webp" alt="Show 3"></div>
+      <div class="slide"><img src="../public/images/asset 18.jpeg" alt="Show 6"></div>
+      <div class="slide"><img src="../public/images/asset 19.jpeg" alt="Show 7"></div>
+      <div class="slide"><img src="../public/images/asset 20.jpeg" alt="Show 8"></div>
+      <div class="slide"><img src="../public/images/asset 23.jpeg" alt="Show 9"></div>
+      <div class="slide"><img src="../public/images/asset 24.jpeg" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 23.jpeg" alt="Show 9"></div>
+      <div class="slide"><img src="../public/images/asset 24.jpeg" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 12.webp" alt="Show 1"></div>
+      <div class="slide"><img src="../public/images/asset 16.webp" alt="Show 2"></div>
+      <div class="slide"><img src="../public/images/asset 13.webp" alt="Show 3"></div>
   </div>
   <button class="prev" onclick="moveSlidey(-1)">&#10094;</button>
   <button class="next" onclick="moveSlidey(1)">&#10095;</button>
@@ -243,16 +243,16 @@
 <div class="slider">
   <h2>Todays top picks</h2>
   <div class="slider-containerer">
-      <div class="slide"><img src="../public/IMAGES/asset 12.webp" alt="Show 1"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 16.webp" alt="Show 2"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 13.webp" alt="Show 3"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 14.jpeg" alt="Show 4"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 17.jpeg" alt="Show 5"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 14.jpeg" alt="Show 4"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 17.jpeg" alt="Show 5"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 24.jpeg" alt="Show 10"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 23.jpeg" alt="Show 9"></div>
-      <div class="slide"><img src="../public/IMAGES/asset 13.webp" alt="Show 3"></div>
+      <div class="slide"><img src="../public/images/asset 12.webp" alt="Show 1"></div>
+      <div class="slide"><img src="../public/images/asset 16.webp" alt="Show 2"></div>
+      <div class="slide"><img src="../public/images/asset 13.webp" alt="Show 3"></div>
+      <div class="slide"><img src="../public/images/asset 14.jpeg" alt="Show 4"></div>
+      <div class="slide"><img src="../public/images/asset 17.jpeg" alt="Show 5"></div>
+      <div class="slide"><img src="../public/images/asset 14.jpeg" alt="Show 4"></div>
+      <div class="slide"><img src="../public/images/asset 17.jpeg" alt="Show 5"></div>
+      <div class="slide"><img src="../public/images/asset 24.jpeg" alt="Show 10"></div>
+      <div class="slide"><img src="../public/images/asset 23.jpeg" alt="Show 9"></div>
+      <div class="slide"><img src="../public/images/asset 13.webp" alt="Show 3"></div>
   </div>
   <button class="prev" onclick="moveSlided(-1)">&#10094;</button>
   <button class="next" onclick="moveSlided(1)">&#10095;</button>
