--- a/pages/trans-prof.html
+++ b/pages/trans-prof.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="../style/trans-prof.css">
+        <link rel="stylesheet" href="../public/images/style/trans-prof.css">
         <script src="https://kit.fontawesome.com/8752be39ad.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
                 <img src="../public/images/Netflix_Logo_PMS.png" alt="">
             </div>
             <ul>
-                <li><a href="/Netflix-clone/src/index.html">Sign Out</a></li>
+                <li><a href="/src/index.html">Sign Out</a></li>
             </ul>
         </nav>
     </header>
