--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
 
 
-    <link rel="stylesheet" href="/public/style/style.css" />
+    <link rel="stylesheet" href="../public/style/style.css" />
 
 
     <link
@@ -533,7 +533,7 @@
       </div>
       <p class="end-tag">Netflix Nigeria</p>
     </footer>
-    <script src="/script/runner.js"></script>
+    <script src="../script/runner.js"></script>
 
   </body>
 </html>
