edited the file path

--- a/src/home.html
+++ b/src/home.html
@@ -143,7 +143,7 @@
       <!-- page one -->
         <div class="page-one">
           <div class="bg-video">
-            <video src="/Netflix-clone/public/videos/I'm Not Him (2021) (NetNaija.com).mp4" id="myVideo"></video>
+            <video src="../public/videos/I'm Not Him (2021) (NetNaija.com).mp4" id="myVideo"></video>
           </div>
           <div class="txt">
             <div class="txt-c">
