--- a/src/tv.html
+++ b/src/tv.html
@@ -29,7 +29,7 @@
         </button>
 
         <div class="nav-text">
-          <h2><a href="home.html">Home</a></h2>
+          <h2><a href="./home.html">Home</a></h2>
         <h2><a href="./tv.html">TV Shows</a></h2>
       </div>
       </div>
