--- a/pages/log.html
+++ b/pages/log.html
@@ -41,7 +41,7 @@
             <input type="checkbox" id="chk"/>
             <span><p>Remember me</p></span>
         </div>
-        <p class="newt">New to Netflix?<a href="/Netflix-clone/src/index.html">Sign up now</a></p>
+        <p class="newt">New to Netflix?<a href="../src/index.html">Sign up now</a></p>
         <p class="stamp">This page is protected by Google reCAPTCHA to ensure you are not a bot. <span id="show-up">Learn more</sp></p>
         <p class="tbrevld" id="revv">The information collected by Google reCAPTCHA is subject to the Google Privacy Policy and Terms of Service, and is used for providing, maintaining, and improving the reCAPTCHA service and for general security purposes (it is not used for personalized advertising by Google).</p>
     </form>
@@ -84,7 +84,7 @@
         </div>
       </div>
 </footer>
-    <script src="/script/log.js"></script>
+    <script src="../script/log.js"></script>
 
 </body>
 </html>
