added some things in my media query

--- a/src/home.html
+++ b/src/home.html
@@ -16,6 +16,10 @@
           <nav>
             <div class="nav-logo">
               <img src="../public/images/Netflix_Logo_PMS.png" alt="">
+              <div class="mb-view">
+              <h3>Browse</h3>
+              <i class="fa-solid fa-caret-down" id="drp"></i>
+              </div>
             </div>
             <ul>
               <li><a href="./home.html">Home </a></li>
@@ -63,7 +67,7 @@
                   </div>
                   
 
-                  <div class="arr-drop">
+                  <div class="arr-drop ">
                     <img src="../public/images/AAAABSXQoki5NPH49PnbxeGimvlQtPDmYO7N3e7yd0zhLNA5ByAKNkd_hCSzOmTgsDjYs2qOCWbwhgHfiY4_Caxfhg6fEVazSlQ.png" alt="">
                     <div class="dropdown">
                       <div class="manage">
