added tv show page to my nav bar

--- a/src/home.html
+++ b/src/home.html
@@ -16,13 +16,13 @@
           <nav>
             <div class="nav-logo">
               <img src="../public/images/Netflix_Logo_PMS.png" alt="">
-              <div class="mb-view">
+              <!-- <div class="mb-view">
               <h3>Browse</h3>
               <i class="fa-solid fa-caret-down" id="drp"></i>
-              </div>
+              </div> -->
             </div>
             <ul>
-              <li><a href="./home.html">Home </a></li>
+              <li><a href="./home.html" class="hm">Home </a></li>
               <li><a href="../src/tv.html" class="per">Tv Shows</a></li>
             </ul>
             <div class="profile">
@@ -67,7 +67,7 @@
                   </div>
                   
 
-                  <div class="arr-drop ">
+                  <div class="arr-drop pr ">
                     <img src="../public/images/AAAABSXQoki5NPH49PnbxeGimvlQtPDmYO7N3e7yd0zhLNA5ByAKNkd_hCSzOmTgsDjYs2qOCWbwhgHfiY4_Caxfhg6fEVazSlQ.png" alt="">
                     <div class="dropdown">
                       <div class="manage">
